fixed: remove DARK/LIGHT theme flickering effect

--- a/src/public/styles/variables.css
+++ b/src/public/styles/variables.css
@@ -11,7 +11,7 @@
  * original author. Project created only for personal purposes.
  */
 
-body {
+html[data-theme="LIGHT"] body {
     --background-color: #ffffff;
     --background-inverse-color: #24292f;
     --text-color: #24292f;
@@ -25,7 +25,7 @@ body {
     --separator-color: #c0c7cf;
 }
 
-body.dark-theme {
+html[data-theme="DARK"] body {
     --background-color: #0d1117;
     --background-inverse-color: #e2e3e4;
     --text-color: #e2e3e4;
